# scale-estimation

./: .gitignore  CMakeLists.txt  README.md
include/: metric_sensor.hpp  particle_filter.hpp  random_walker.hpp  visual_sensor.hpp
scripts/em-estimation/: main.m  octave-workspace  real_data.m  results
scripts/octave/: kalman_filter_estimation  particle_filter.m  particle_filter_estimation  pfilter  plot_data.m  pose_estimation
scripts/tests/: batch-test.sh
src/: main.cpp  metric_sensor.cpp  particle_filter.cpp  random_walker.cpp  visual_sensor.cpp
